compatibility-tests/compile-fail/tests/ui/duplication-variant.stderr
error: Multiple `display` attributes are not supported on an enum variant
 --> tests/ui/duplication-variant.rs:6:13
  |
6 |     #[snafu(display("should not allow duplicate display"))]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
